--- a/vue-diary-sample/package.json
+++ b/vue-diary-sample/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-diary",
+  "name": "vue-diary-sample",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,6 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "firebase": "^9.12.1",
     "vue": "^3.2.38"
   },
   "devDependencies": {
